--- a/HomeWork4/index.html
+++ b/HomeWork4/index.html
@@ -7,8 +7,8 @@
     <title>HomeWork4</title>
   </head>
   <body>
-    <button class="html">HTML</button>
-    <button class="css">CSS</button>
+    <button id="html">HTML</button>
+    <button id="css">CSS</button>
     <script src="./js/script.js"></script>
   </body>
 </html>
